schedule update, button modifications, removal of submission advertising

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<nav class="main-nav navbar navbar-expand-lg">
 					<div class="site-logo"><a class="scrollto" href="#hero-block"><img class="logo-icon" src="assets/images/logo.png" alt="logo"></a></div>    
 					
-					<div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="https://easychair.org/my/conference?conf=whaieu2024" target="_blank">Submissions</a></div>
+					<div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="https://www.ecai2024.eu" target="_blank">Register</a></div>
 					
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
@@ -104,6 +104,21 @@
 <p>It is undoubtedly one of the most elusive topics in Computer Science; we must approach its study from various points of view. This situation is due in part to the enormous and nebulous nature of the very definition of intelligence. Applications of AI range from machines that are capable of reasoning to fast and complex search algorithms used to play, for example, board games as complex as Go. AI has relevant applications in almost all areas of life and has been adapted to how we use computers in society.</p>
 <p><strong>The Workshop on the History of AI in Europe aims to delve into the chronology of AI on our continent, tracing its journey from theory to practice and from its beginnings to its current state</strong>. Its objective is to shed light on some essential milestones, themes and advances that have marked this journey. Additionally, we want to identify key people who were active players in shaping the history of AI in Europe.</p>
 </div>
+<section id="schedule-section" class="schedule-section section">
+			<div class="benefits-list text-center mb-3">
+				<h4 class="text-center mb-4">Workshop Programme</h4>
+				<ul class="list-unstyled text-start d-inline-block">
+					<li><i class="fas fa-check-circle me-2"></i>14:00-:14:10 <strong>Introduction</strong></li>
+					<li><i class="fas fa-check-circle me-2"></i>14:10:14:30 <strong>The Early Days of the AISB.</strong>  E. Alonso</li>
+					<li><i class="fas fa-check-circle me-2"></i>14:30:14:14:50 <strong>The Birth of AI in Portugal.</strong> J. Pavão Martins</li>
+					<li><i class="fas fa-check-circle me-2"></i>14:50-15:10 <strong>Spanish Association for Artificial Intelligence: story, achievements and challenges.</strong> F. Verdejo et al</li>
+					<li><i class="fas fa-check-circle me-2"></i>15:10-15:30 <strong>A Short History of the Early Years of Artificial Intelligence at Edinburgh.</strong> C.K.I. Williams et al</li>
+					<li><i class="fas fa-check-circle me-2"></i>15:30-15:50 <strong>Four figures of Parisian AI research and four questions to ask them.</strong> F. Pachet et al</li>
+					<li><i class="fas fa-check-circle me-2"></i>15:50-16:10 <strong>European research contributions to model-based reasoning – a personal view</strong> F. Wotawa</li>
+					<li><i class="fas fa-check-circle me-2"></i>16:10-17:00 <strong>Discussion on The History of AI in Europe Timeline</strong></li>
+				</ul>
+			</div><!--//benefits-list-->
+		</section>
 			<div class="benefits-list text-center mb-3">
 				<h4 class="text-center mb-4">Topics</h4>
 				<ul class="list-unstyled text-start d-inline-block">
@@ -140,7 +155,6 @@
 				<h4 class="countdown-intro mb-2 text-center mb-3">Event Starts In:</h4>
 				<div id="countdown-box" class="countdown-box"></div>
 			</div><!--//event-countdown-->
-			<div class="about-cta text-center mb-5"><a class="btn btn-secondary btn-lg  mb-5" href="https://easychair.org/my/conference?conf=whaieu2024" target="_blank">Submit your contribution today</a></div>
 		</div><!--//container-->
 <!--
 		<div class="media-block theme-bg-primary py-5">
@@ -388,7 +402,6 @@
 					</div><!--//card-->
 				</div><!--//col-->
 			</div><!--//row-->
-			<div class="about-cta text-center mb-5"><a class="btn btn-secondary btn-lg  mb-5" href="https://easychair.org/my/conference?conf=whaieu2024" target="_blank">Submit your contribution today</a></div>
 		</div><!--//container-->
 		
 	</section><!--//speakers-section-->
