--- a/index.html
+++ b/index.html
@@ -106,16 +106,23 @@
 </div>
 <section id="schedule-section" class="schedule-section section">
 			<div class="benefits-list text-center mb-3">
-				<h4 class="text-center mb-4">Workshop Programme</h4>
+				<h4 class="text-center mb-4">Workshop Programme (20th October)</h4>
 				<ul class="list-unstyled text-start d-inline-block">
 					<li><i class="fas fa-check-circle me-2"></i>14:00-:14:10 <strong>Introduction</strong></li>
-					<li><i class="fas fa-check-circle me-2"></i>14:10:14:30 <strong>The Early Days of the AISB.</strong>  E. Alonso</li>
-					<li><i class="fas fa-check-circle me-2"></i>14:30:14:14:50 <strong>The Birth of AI in Portugal.</strong> J. Pavão Martins</li>
-					<li><i class="fas fa-check-circle me-2"></i>14:50-15:10 <strong>Spanish Association for Artificial Intelligence: story, achievements and challenges.</strong> F. Verdejo et al</li>
-					<li><i class="fas fa-check-circle me-2"></i>15:10-15:30 <strong>A Short History of the Early Years of Artificial Intelligence at Edinburgh.</strong> C.K.I. Williams et al</li>
-					<li><i class="fas fa-check-circle me-2"></i>15:30-15:50 <strong>Four figures of Parisian AI research and four questions to ask them.</strong> F. Pachet et al</li>
-					<li><i class="fas fa-check-circle me-2"></i>15:50-16:10 <strong>European research contributions to model-based reasoning – a personal view</strong> F. Wotawa</li>
-					<li><i class="fas fa-check-circle me-2"></i>16:10-17:00 <strong>Discussion on The History of AI in Europe Timeline</strong></li>
+					<li><i class="fas fa-check-circle me-2"></i>14:10-16:00 <strong>Session 1</strong></li>
+					<ul>
+						<li>14:10:14:30 <strong>The Early Days of the AISB.</strong>  E. Alonso</li>
+						<li>14:30:14:14:50 <strong>The Birth of AI in Portugal.</strong> J. Pavão Martins</li>
+						<li>14:50-15:10 <strong>Spanish Association for Artificial Intelligence: story, achievements and challenges.</strong> F. Verdejo et al</li>
+					  <li>15:10-15:30 <strong>A Short History of the Early Years of Artificial Intelligence at Edinburgh.</strong> C.K.I. Williams et al</li>
+					</ul>
+					<li><i class="fas fa-check-circle me-2"></i>15:30-16:00 <strong>Coffee Break.</strong></li>
+					<li><i class="fas fa-check-circle me-2"></i>16:00-16:40 <strong>Session 2</strong></li>
+					<ul>
+					<li>16:00-16:20 <strong>Four figures of Parisian AI research and four questions to ask them.</strong> F. Pachet et al</li>
+					<li>16:20-16:40 <strong>European research contributions to model-based reasoning – a personal view</strong> F. Wotawa</li>
+				  </ul>
+					<li><i class="fas fa-check-circle me-2"></i>16:40-17:30 <strong>Discussion on The History of AI in Europe Timeline</strong></li>
 				</ul>
 			</div><!--//benefits-list-->
 		</section>
