--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<li>16:00-16:20 <strong>Four figures of Parisian AI research and four questions to ask them.</strong> F. Pachet et al</li>
 					<li>16:20-16:40 <strong>European research contributions to model-based reasoning – a personal view</strong> F. Wotawa</li>
 				  </ul>
-					<li><i class="fas fa-check-circle me-2"></i>16:40-17:30 <strong>Discussion on The History of AI in Europe Timeline</strong></li>
+					<li><i class="fas fa-check-circle me-2"></i>16:40-17:30 <strong>Discussion on The History of AI in Europe Timeline. <u> Please, do not hesitate to send your contributions before the workshop using this <a href="https://docs.google.com/document/d/1bTB4PrBduZUduVROpJYBlcj3yq3REe5kM54mZiOieak/edit?usp=sharing">link</a>!</strong></u></li>
 				</ul>
 			</div><!--//benefits-list-->
 		</section>
