--- a/index.html
+++ b/index.html
@@ -319,19 +319,17 @@
 				
 				<div class="col-6 col-lg-3 mb-4">
 					<div class="card rounded-0">
-						<a href="#modal-speaker-#" data-bs-toggle="modal" data-bs-target="#modal-speaker-#"><img src="assets/images/speakers/lindgren.png" class="card-img-top rounded-0" alt=""></a>
+						<a href="#modal-speaker-6" data-bs-toggle="modal" data-bs-target="#modal-speaker-6"><img src="assets/images/speakers/lindgren.png" class="card-img-top rounded-0" alt=""></a>
 						<div class="card-body">
 							<h5 class="card-title mb-2">Helena Lindgren</h5>
 							<div class="card-text mb-3">
 								<div class="meta">Umeå Universitet</div>
 							</div><!--//card-text-->
-							<a href="#modal-speaker-#" data-bs-toggle="modal" data-bs-target="#modal-speaker-#">Read more &rarr;</a>
+							<a href="#modal-speaker-6" data-bs-toggle="modal" data-bs-target="#modal-speaker-6">Read more &rarr;</a>
 						</div><!--//card-->
 						<div class="card-footer text-muted">
 							<ul class="social-list list-inline mb-0">
-								<li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-								<li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-								<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/helena-lindgren-32501a2/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
 							</ul><!--//social-list-->
 						</div>
 					</div><!--//card-->
@@ -723,7 +721,7 @@
 						</div><!--//row-->
 					</div>
 					<div class="desc p-4 p-lg-5">
-						<p>Cristian Barrué is a senior researcher at the Institute of Robotics and Industrial Informatics (CSIC-UPC) and the Department of Computer Science at the UPC. He has a PhD in Artificial Intelligence from UPC in 2012 and is a member of the Knowledge Engineering and Machine Learning group (KEMLg) and the Centre for Research in Intelligent Data Science and Artificial Intelligence (IDEAI). He has been an active member of The Observatory on Society and Artificial Intelligence launched by the European AI on Demand Platform and manager of the Open Laboratory of Assistive Robotics (<a target="_blank" rel="noopener noreferrer" href="https://www.labora.cat/en">LabORA</a>).</p>
+						<p>Cristian Barrué is Research Director at Universitat Politècnica de Catalunya and senior researcher at the Institute of Robotics and Industrial Informatics (CSIC-UPC) and the Department of Computer Science at the UPC. He has a PhD in Artificial Intelligence from UPC in 2012 and is a member of the Knowledge Engineering and Machine Learning group (KEMLg) and the Centre for Research in Intelligent Data Science and Artificial Intelligence (IDEAI). He has been an active member of The Observatory on Society and Artificial Intelligence launched by the European AI on Demand Platform and manager of the Open Laboratory of Assistive Robotics (<a target="_blank" rel="noopener noreferrer" href="https://www.labora.cat/en">LabORA</a>).</p>
 					</div>
 				</div><!--//modal-body-->
 			</div><!--//modal-content-->
@@ -874,6 +872,43 @@ Ulises Cortés is a Full-Professor and Researcher of the Universitat Politècnic
 			</div><!--//modal-content-->
 		</div><!--//modal-dialog-->
 	</div><!--//modal-->
+
+<div class="modal modal-speaker modal-speaker-6" id="modal-speaker-6" tabindex="-1" role="dialog" aria-labelledby="speaker-1-ModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 id="speaker-1-ModalLabel" class="modal-title sr-only"
+>Helena Lindgren</h4>
+				</div>
+				<div class="modal-body p-0">
+					<div class="theme-bg-light p-5">
+						<div class="row">
+							<div class="col-12 col-md-auto text-center">
+							    <img class="profile-image mb-3 mb-md-0 me-md-4 rounded-circle mx-auto" src="assets/images/speakers/lindgren.png" alt="" />
+							</div>
+							
+							<div class="col text-center text-md-start mx-auto">
+								<h2 class="name mb-2">Helena Lindgren</h2>
+								<div class="meta">Professor</div>
+								<div class="meta mb-2">Umeå Universitet</div>
+								<ul class="social-list list-inline mb-0">								
+									<li class="list-inline-item"><a  href="https://www.linkedin.com/in/helena-lindgren-32501a2/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+									<!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
+								</ul><!--//social-list--> 
+							</div><!--//col-->
+						</div><!--//row-->
+					</div>
+					<div class="desc p-4 p-lg-5">
+						<p>Helena Lindgren is full Professor of Computer Science at Umeå University, Sweden, where she leads the research group on Interactive and Intelligent Systems. Lindgren conducts interdisciplinary research on Human-Centered Artificial Intelligence, with particular focus on human-AI collaboration and teaming applied to decision support and behavior change systems for improving health.&nbsp;She is Co-Director of the Wallenberg AI, Autonomous Systems and Software Program – Humanity and Society (<a target="_blank" rel="noopener noreferrer" href="https://wasp-hs.org/">WASP-HS</a>), member of the program committees for the AI branch of the Wallenberg AI, Autonomous Systems and Software Program (<a target="_blank" rel="noopener noreferrer" href="https://wasp-sweden.org/">WASP</a>), the Wallenberg AI and Transformative Technologies Education Development Program (<a target="_blank" rel="noopener noreferrer" href="https://wasp-ed.org/">WASP-ED</a>), and member of&nbsp;the board of the Swedish Artificial Intelligence Society (SAIS).&nbsp;</p>
+					</div>
+				</div><!--//modal-body-->
+			</div><!--//modal-content-->
+		</div><!--//modal-dialog-->
+	</div><!--//modal-->
+
+
+
 	<div class="modal modal-speaker modal-speaker-9" id="modal-speaker-9" tabindex="-1" role="dialog" aria-labelledby="speaker-1-ModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
