adjustements in timeline params

--- a/timeline.html
+++ b/timeline.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-	<title>WHAI2024</title>
+	<title>The Timeline of the History of AI on Europe</title>
 	
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Bootstrap 5 Tech Conference Template">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+	<meta name="description" content="This timeline offers a comprehensive
+ record of the history of AI in Europe">
+	<meta name="author" content="Cristian Barrué">    
 	<link rel="shortcut icon" href="assets/images/favicon_io/favicon.ico"> 
 	
 	<!-- Google Font -->
@@ -80,7 +81,7 @@
             // optionally, a third argument with configuration options can be passed.
             // See below for more about options.
         		var options = {
-   							 	timenav_height_percentage: 40,
+   							 	timenav_height_percentage: 50,
     							initial_zoom: 5
   					}
             timeline = new TL.Timeline('timeline-embed',
