added proceedings and citation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Workshop on the History of AI in Europe">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+	<meta name="author" content="Cristian Barrué">    
 	<link rel="shortcut icon" href="assets/images/favicon_io/favicon.ico"> 
 	
 	<!-- Google Font -->
@@ -37,6 +37,25 @@
     	display: flex;
     	flex-wrap: wrap;
     }
+    pre {
+            background-color: black;
+            color: white;
+            padding: 15px;
+            border-radius: 5px;
+            font-family: Consolas, 'Courier New', monospace;
+            white-space: pre-wrap; /* Ensures the code wraps */
+            word-wrap: break-word; /* Ensures long words break */
+            font-weight: bold; /* Makes the text bold */
+            text-align: left; /* Keeps the text aligned to the left */
+            display: inline-block; /* Makes the block as wide as the content */
+        }
+    }
+    .code-container {
+            display: flex;
+            justify-content: center; /* Center the block horizontally */
+            align-items: center;
+            text-align: center; /* Center the entire block within the page */
+        }
   </style>
 
 </head> 
@@ -124,8 +143,27 @@
 				  </ul>
 					<li><i class="fas fa-check-circle me-2"></i>16:40-17:30 <strong>Discussion on The History of AI in Europe Timeline. <u> Please, do not hesitate to send your contributions before the workshop using this <a href="https://docs.google.com/document/d/1bTB4PrBduZUduVROpJYBlcj3yq3REe5kM54mZiOieak/edit?usp=sharing">link</a>!</strong></u></li>
 				</ul>
+				<div class="sponsors-cta text-center pt-5"><a class="btn-primary btn btn-lg" href="https://doi.org/10.5281/zenodo.13898066">Get the proceedings</a></div>
+				<br>
+				<div class="code-container">
+    <pre><code>
+// BibTeX citation
+@proceedings{WHAI24,
+  doi = {10.5281/zenodo.1389067},
+  url = {https://zenodo.org/doi/10.5281/zenodo.1389066},
+  author = {Cortés, Ulises and Bugarín, Alberto and Barrué, Cristian},
+  title = {Proc. of the Workshop on the History of AI in Europe (WHAI@ECAI)},
+  publisher = {Zenodo},
+  year = {2024},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+</code></pre>
+</div>
+		</section>
 			</div><!--//benefits-list-->
 		</section>
+
+		<br>
 			<div class="benefits-list text-center mb-3">
 				<h4 class="text-center mb-4">Topics</h4>
 				<ul class="list-unstyled text-start d-inline-block">
