added cfp and links and blinks

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
     .blinking {
         animation: blink 1s infinite;
     }
+    /* Greyed out item */
+    .greyed {
+        opacity: 0.5; /* Adjust the opacity */
+    }
   </style>
 
 </head> 
@@ -203,10 +207,10 @@
 			<div class="benefits-list text-center mb-3">
 				<h4 class="text-center mb-4">Key Dates</h4>
 				<ul class="list-unstyled text-start d-inline-block">
-					<li><i class="fa-regular fa-calendar me-2"></i>Paper submission  June 15, 2024</li>
-					<li><i class="fa-regular fa-calendar me-2"></i>Author notification  July 1, 2024</li>
-					<li><i class="fa-regular fa-calendar me-2"></i>Camera Ready  August 22, 2024</li>
-					<li><i class="fa-regular fa-calendar me-2"></i>Workshop  October 20 (14pm session), 2024</li>
+					<li class="greyed"><i class="fa-regular fa-calendar me-2"></i>Paper submission  June 15, 2024</li>
+					<li class="greyed"><i class="fa-regular fa-calendar me-2"></i>Author notification  July 1, 2024</li>
+					<li class="greyed"><i class="fa-regular fa-calendar me-2"></i>Camera Ready  August 22, 2024</li>
+					<li class="greyed"><i class="fa-regular fa-calendar me-2"></i>Workshop  October 20 (14pm session), 2024</li>
 					<li><i class="fa-regular fa-calendar me-2 blinking"></i>Paper submission for European Journal on Artificial Intelligence  February 28, 2025</li>
 				</ul>
 			</div><!--//benefits-list-->
