--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
         opacity: 0.5; /* Adjust the opacity */
     }
   </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EGLR6Z9E2T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-EGLR6Z9E2T');
+</script>
 </head> 
 
 <body>    
